<resources>
    <string name="app_name">FoodFinder</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- Strings used for navigation -->
    <string name="title_cafe">Кафе</string>
    <string name="title_canteen">Столовые</string>
    <string name="title_bar">Бары</string>
    <string name="title_restaurant">Рестораны</string>
    <string name="title_buffet">Буфеты</string>



    <string name="title_activity_panorama">PanoramaActivity</string>


    <string name="not_found_error_message">Not found</string>
    <string name="network_error_message">Network error</string>
    <string name="remote_error_message">Remote server error</string>
    <string name="unknown_error_message">Unknown error</string>
</resources>
