<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        app:cnb_iconColor="@color/nav_menu"
        app:cnb_backgroundColor="@color/colorItem"
        android:id="@+id/navigation_cafe"
        android:icon="@drawable/ic_cafe_menu"
        android:title="@string/title_cafe" />

    <item
        app:cnb_iconColor="@color/colorItem_selected"
        app:cnb_backgroundColor="@color/colorItem"
        android:id="@+id/navigation_restaurant"
        android:icon="@drawable/ic_restaurant_menu"
        android:title="@string/title_restaurant" />

    <item
        app:cnb_iconColor="@color/colorItem_selected"
        app:cnb_backgroundColor="@color/colorItem"
        android:id="@+id/navigation_bar"
        android:icon="@drawable/ic_bar_menu"
        android:title="@string/title_bar" />

    <item
        app:cnb_iconColor="@color/colorItem_selected"
        app:cnb_backgroundColor="@color/colorItem"
        android:id="@+id/navigation_buffet"
        android:icon="@drawable/ic_buffet_menu"
        android:title="@string/title_buffet" />

    <item
        app:cnb_iconColor="@color/colorItem_selected"
        app:cnb_backgroundColor="@color/colorItem"
        android:id="@+id/navigation_canteen"
        android:icon="@drawable/ic_canteen_menu"
        android:title="@string/title_canteen" />

</menu>